--- a/html/01-기부-종합.html
+++ b/html/01-기부-종합.html
@@ -281,164 +281,162 @@
   </div>
 
 
-  <div class="max-w-[868px] lg:mx-auto mx-7 ">
-    <ul class="lg:flex flex-wrap lg:-mx-4">
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">1호</dt>
+  <div class="max-w-[868px] lg:mx-auto">
+    <ul class="flex flex-wrap lg:-mx-4 -mx-2">
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">1호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">이길여</strong>
-                <span>가천모성보호기금</span>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">이길여</strong>
               </dt>
               <dd class="font-bold">가천대학교 총장</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">2호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">2호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">장연신</strong>
-                <span>장연신기금 / 애경</span>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">장연신</strong>
               </dt>
               <dd class="font-bold">애경그룹 회장</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">3호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">3호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">진양혜·손범수</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">진양혜·손범수</strong>
               </dt>
               <dd class="font-bold">방송인</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">4호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">4호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">신창재</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">신창재</strong>
               </dt>
               <dd class="font-bold">교보생명 회장</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">5호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">5호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">故 박영숙</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">故 박영숙</strong>
               </dt>
               <dd class="font-bold">한국여성재단 초대 이사장<br>
                 아시아위민브릿지 두런두런 前 이사장</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">6호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">6호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">조형</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">조형</strong>
               </dt>
               <dd class="font-bold">한국여성재단 前 이사장<br>
                 미래포럼 前 이사장</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">7호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">7호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">양희은</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">양희은</strong>
               </dt>
               <dd class="font-bold">가수</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
             </div>
         </div>
       </li>
-      <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
-            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">8호</dt>
+      <li class="lg:px-4 px-2 lg:w-1/3 w-1/2 lg:mb-16 mb-10">
+        <div class="aspect-[268/368] pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center lg:px-6 lg:pt-6 px-3 pt-3 pb-2">
+            <dt class="lg:w-[40px] lg:h-[40px] w-[30px] h-[30px] lg:text-base text-sm font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">8호</dt>
             <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
-          <div class="px-6">
-            <dl class="text-[13px] mb-8">
-              <dt class="mb-1 flex items-baseline">
-                <strong class="text-[32px] mr-2">정려원</strong>
+          <div class="lg:px-6 px-3">
+            <dl class="lg:text-[13px] text-xs lg:mb-8 mb-3">
+              <dt class="mb-0 lg:mb-2 flex items-baseline">
+                <strong class="lg:text-[32px] text-lg mr-2 lg:leading-[1.333]">정려원</strong>
               </dt>
               <dd class="font-bold">배우</dd>
             </dl>
-            <p class="text-sm text-[#FBF4F7] leading-[1.71]">“미래를 변화시키는 힘, 여성입니다”
+            <p class="lg:text-sm text-xs text-[#FBF4F7] lg:leading-[1.71] leading-snug">“미래를 변화시키는 힘, 여성입니다”
               라는 확신으로 한반도 전체의 여성들이 함께 서로 가진 것을 나누는 새로운
               문화를 만드는데 모두의 힘을 다하겠
               습니다.</p>
